--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-camera": "~13.1.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-element-dropdown": "^2.8.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
@@ -27,7 +30,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
